[package]
name = "twice"
version = "0.2.0"
authors = ["Axlefublr"]
license = "MIT"
description = "A tool that randomly picks between two options you specify"
readme = "README.md"
homepage = "https://github.com/Axlefublr/twice"
repository = "https://github.com/Axlefublr/twice"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.17", features = ["derive"] }
rand = "0.8.5"
